k8s/monitoring/kromgo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kromgo
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: kromgo
  replicas: 1
  template:
    metadata:
      labels:
        app: kromgo
        app.kubernetes.io/name: kromgo
    spec:
      containers:
        - name: kromgo
          image: ghcr.io/kashalls/kromgo:latest@sha256:965ecc92d68dc1a4a969397855367bbc70da03227a941ea607b73bb7e0b78fd6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /kromgo/config.yaml
              subPath: config.yaml
      volumes:
        - name: config
          configMap:
            name: kromgo-configmap
