k8s/monitoring/kromgo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kromgo
  namespace: monitoring
  labels:
    app: kromgo
spec:
  selector:
    app: kromgo
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
