k8s/monitoring/kromgo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kromgo-ingress
  namespace: monitoring
  labels:
    app: kromgo
spec:
  ingressClassName: nginx-ext
  tls:
    - hosts:
        - kromgo.lab.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: kromgo.lab.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kromgo
                port:
                  name: http
